# ssn-console

./: .dockerignore  .env.example  .env.local.example  .gitignore  .prettierignore  AGENTS.md  Cargo.toml  Justfile  README.md  canister_ids.json  clippy.toml  dfx.json  flake.nix  icp.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.cjs  tsconfig.json  turbo.json
.github/: dependabot.yml  filters.yml
.github/workflows/: build-and-test.yml  canbench-post-comment.yml  deploy-production.yml  deploy-test.yml  lint.yml  run-benchmarks.yml
.opencode/plugins/: env-protection.ts
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
benchmarks/: README.md
benchmarks/backend/: canbench.yml  canbench_env  canbench_results.yml  env_vars.csv
benchmarks/canister-history/: canbench.yml  canbench_results.yml
benchmarks/cycles-monitor/: canbench.yml  canbench_results.yml  env_vars.csv
config/: Caddyfile  auth-service.cil  auth-service.containerfile  caddy.cil  caddy.containerfile  canister-otlp-syncer.cil  canister-otlp-syncer.containerfile  canister-otlp-syncer.timer  config.alloy  metrics-proxy.cil  metrics-proxy.containerfile  offchain-service.cil  offchain-service.containerfile  payments-service.cil  payments-service.containerfile
config/quadlets/: auth-service.container  caddy.container  canister-otlp-syncer.container  metrics-proxy.container  (+2 more)
docs/: DEPLOY.md  INFRASTRUCTURE.md  ORGANIZATION_MANAGEMENT.md  OVERVIEW.md  PERMISSIONS.md  POCKET_IC.md  PROJECT_MANAGEMENT.md  TEAM_MANAGEMENT.md  USER_MANAGEMENT.md
local/: README.md  alloy.local.alloy  compose.yml  prometheus.local.yml
scripts/: ci-download-canbench-artifacts.sh  ci-run-benchmark.sh  deploy-containers.sh  generate-verify-token.ts  init-local.sh  initial-server-setup.sh  outline.ts  server-maintenance.sh  set-canister-env.sh  update-local-env.sh  update-local-history-ranges.sh
services/: .golangci.yml  Justfile  README.md  go.work  go.work.sum
src/backend/: Cargo.toml  backend.did
src/backend-e2e/: Cargo.toml  bindings.hbs  build.rs
src/backend-e2e/src/: lib.rs
src/backend-e2e/tests/: permission_system.rs  proposal_quorum.rs
src/backend-e2e/tests/common/: env.rs  mod.rs  scenario.rs
src/backend/candid/: approval_policies.did  canister.did  cycles_ledger.did  organization.did  project.did  proposal.did  team.did  terms_and_conditions.did  trusted_partner.did  user_profile.did
src/backend/src/: constants.rs  env.rs  jwt.rs  lib.rs  test_support.rs
src/backend/src/controller/: approval_policy.rs  canister.rs  cycles_ledger.rs  http.rs  invite.rs  metrics.rs  mod.rs  organization.rs  organization_billing_plan.rs  principal_link.rs  project.rs  proposal.rs  staff_permissions.rs  team.rs  terms_and_conditions.rs  trusted_partner.rs  usage.rs  user_profile.rs
src/backend/src/data/: approval_policy_repository.rs  canister_repository.rs  invite_repository.rs  mod.rs  organization_billing_plan_repository.rs  organization_repository.rs  orphaned_canister_repository.rs  project_repository.rs  proposal_repository.rs  service_principal_repository.rs  team_repository.rs  terms_and_conditions_repository.rs  trusted_partner_repository.rs  usage_repository.rs  user_profile_repository.rs
src/backend/src/data/memory/: approval_policy_memory.rs  billing_plan_memory.rs  canister_memory.rs  invite_memory.rs  memory_manager.rs  mod.rs  organization_memory.rs  orphaned_canister_memory.rs  project_memory.rs  proposal_memory.rs  service_principal_memory.rs  team_memory.rs  terms_and_conditions_decision_memory.rs  terms_and_conditions_memory.rs  terms_and_conditions_response_memory.rs  trusted_partner_memory.rs  usage_memory.rs  user_profile_memory.rs
src/backend/src/data/model/: approval_policy.rs  canister.rs  invite.rs  mod.rs  organization.rs  organization_billing_plan.rs  permissions.rs  project.rs  proposal.rs  staff_permissions.rs  team.rs  terms_and_conditions.rs  terms_and_conditions_decision.rs  terms_and_conditions_response.rs  trusted_partner.rs  usage.rs  user_profile.rs  user_stats.rs  uuid.rs
src/backend/src/dto/: approval_policy.rs  canister.rs  cycles_ledger.rs  invite.rs  metrics.rs  mod.rs  organization.rs  organization_billing_plan.rs  permissions.rs  principal_link.rs  project.rs  proposal.rs  rejection.rs  staff_permissions.rs  team.rs  terms_and_conditions.rs  trusted_partner.rs  usage.rs  user_profile.rs
src/backend/src/mapping/: approval_policy.rs  canister.rs  invite.rs  mod.rs  organization.rs  permissions.rs  project.rs  proposal.rs  staff_permissions.rs  team.rs  terms_and_conditions.rs  trusted_partner.rs  usage.rs  user_profile.rs
src/backend/src/service/: access_control_service.rs  approval_policy_service.rs  canister_service.rs  cycles_ledger_service.rs  invite_service.rs  metrics_service.rs  mod.rs  organization_billing_plan_service.rs  organization_service.rs  principal_link_service.rs  project_service.rs  proposal_service.rs  service_principal_service.rs  staff_permissions_service.rs  staleness_service.rs  team_service.rs  terms_and_conditions_service.rs  trusted_partner_service.rs  usage_service.rs  user_profile_service.rs
src/backend/src/utils/: mod.rs
src/backend/src/validation/: email.rs  mod.rs  name.rs
src/canister-history/: Cargo.toml  canister_history.did
src/canister-history/src/: canister_id.rs  constants.rs  controller.rs  dto.rs  env.rs  lib.rs  mapping.rs  memory.rs  memory_manager.rs  model.rs  principal_range.rs  repository.rs  service.rs
src/canister-utils/: Cargo.toml  error.did
src/canister-utils/src/: auth.rs  call.rs  cbor.rs  constants.rs  env.rs  error.rs  id.rs  lib.rs  principal.rs  time.rs  timer.rs  uuid.rs
src/cycles-monitor/: Cargo.toml
src/cycles-monitor/src/: constants.rs  controller.rs  dto.rs  env.rs  lib.rs  management_canister.rs  management_canister_mock.rs  management_canister_types.rs  memory.rs  memory_manager.rs  model.rs  repository.rs  service.rs
tools/: .golangci.yml  Justfile  go.work  go.work.sum
(+443 files in other folders)
