[workspace]
members = [
    "src/backend",
    "src/backend-api-rs",
    "src/canister-history",
    "src/canister-history-api-rs",
    "src/canister-utils",
    "src/cycles-monitor"
]
resolver = "2"

[workspace.dependencies]
candid = "0.10"
candid_parser = "0.3"
ic-cdk = "0.19"
ic-cdk-timers = "1"
ic-stable-structures = "0.7"

serde = { version = "1", features = ["derive"] }
futures = "0.3"

backend-api = { path = "./src/backend-api-rs" }
canister-history-api = { path = "./src/canister-history-api-rs" }
canister-utils = { path = "./src/canister-utils" }
