[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
candid_parser.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

serde.workspace = true
backend-api.workspace = true
canister-utils.workspace = true

ic-http-certification = "3"
ic-asset-certification = "3"
include_dir = { version = "0.7", features = ["glob"] }
dotenv_codegen = "0.15.0"
futures.workspace = true
ed25519-dalek = "2"
base64 = "0.22"
serde_json = "1"
