[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

serde.workspace = true
backend-api.workspace = true
canister-utils.workspace = true

ic-http-certification = "3"
ic-asset-certification = "3"
include_dir = { version = "0.7", features = ["glob"] }
dotenv_codegen = "0.15.0"
futures.workspace = true
ed25519-dalek = "2"
base64 = "0.22"
serde_json = "1"

[dev-dependencies]
candid_parser.workspace = true

[features]
default = ["embed-frontend"]
canbench-rs = []
# Embed and certify the built frontend assets (../frontend/dist). On by default
# for prod/dfx builds; disable to build the canister without a frontend bundle
# (e.g. backend-only e2e tests, which then need no frontend build).
embed-frontend = []

[lints]
workspace = true
