[package]
name = "canister-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
candid.workspace = true
serde.workspace = true
ic-stable-structures.workspace = true
ic-cdk.workspace = true

ciborium = "0.2"
fastrand = "2"
uuid = { version = "1", features = ["serde"] }
ic-cdk-timers.workspace = true

# Defines Uuid and builds Id<T> on it; opt out of the workspace Uuid ban.
[lints.clippy]
disallowed_types = "allow"
