[package]
name = "cycles-monitor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
canbench-rs.workspace = true
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true

serde.workspace = true
futures.workspace = true

canister-history-api.workspace = true
canister-utils.workspace = true
base64 = "0.22"

[dev-dependencies]
candid_parser.workspace = true

[features]
canbench-rs = []
mock-metrics = []

[lints]
workspace = true
